# wcauth-tb-component

./: .gitignore  Cargo.toml  README.md  build.rs
migrations/: V100__wcauth_kv.sql
src/: config.rs  db_kv.rs  error.rs  i18n.rs  lib.rs  password.rs  profile.rs  set_password.rs  settings.rs
ui/: lit-localize.json  package.json  tsconfig.json  vite.config.ts
ui/src/: icons.ts  index.ts  styles.ts  wcauth-profile-account.ts  wcauth-profile-avatar.ts  wcauth-profile-email.ts  wcauth-profile-password.ts  wcauth-profile-totp.ts  wcauth-profile.ts  wcauth-section.ts  wcauth-settings.ts
ui/src/api/: auth-client.ts
ui/src/i18n/: index.ts  init.ts  localized.ts
ui/src/views/: choice-view.ts  forgot-password-sent-view.ts  forgot-password-view.ts  mfa-view.ts  password-view.ts  register-success-view.ts  register-view.ts  reset-password-done-view.ts  reset-password-view.ts  verify-email-view.ts
ui/xliff/: es.xlf  ru.xlf  zh-Hans.xlf
