[package]
name = "wcauth-tb-component"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "^0.5"
password-hash = { version = "^0.5", features = ["alloc", "getrandom"] }
rand = "0.8"
rust-embed = { workspace = true }
quick-xml = "0.36"
serde = { workspace = true }
serde_json = { workspace = true }
trailbase-wasm = { workspace = true }

[build-dependencies]
trailbase-build = { workspace = true }
