[package]
name = "wcauth-tb-component"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "^0.5"
password-hash = { version = "^0.5", features = ["alloc", "getrandom"] }
rand = "0.8"
rust-embed = { version = "8.4.0", default-features = false, features = ["mime-guess"] }
quick-xml = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

trailbase = { git = "https://github.com/zyrakq/trailbase", default-features = false, features = ["wasm", "pg"] }
trailbase-wasm = { git = "https://github.com/zyrakq/trailbase" }

[build-dependencies]
trailbase-build = { git = "https://github.com/zyrakq/trailbase" }
